Fixes & Firefox tests

--- a/test/assets/existing-iframe.html
+++ b/test/assets/existing-iframe.html
@@ -89,10 +89,10 @@
                         disabled>
                 </div>
             </div>
-            <button type="button" class="btn btn-info" id="btn-get" onclick="test('get')">
+            <button type="button" class="btn btn-info" id="btn-get" onclick="test('get', 'existing-iframe')">
                 Send Code By GET
             </button>
-            <button type="button" class="btn btn-dark" id="btn-post" onclick="test('post')">
+            <button type="button" class="btn btn-dark" id="btn-post" onclick="test('post', 'existing-iframe')">
                 Send Code By POST
             </button>
         </form>
