--- a/test/assets/existing-iframe.html
+++ b/test/assets/existing-iframe.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -13,6 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=Object.entries%2CPromise%2CPromise.prototype.finally%2CElement.prototype.remove"></script>
     <script src="/lib/hashagna.min.js"></script>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
