--- a/test/assets/index.html
+++ b/test/assets/index.html
@@ -40,6 +40,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/existing-iframe.html">Existing iFrame</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/module.html">Module Import</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/module.html">Module Import</a>
+                </li>
             </ul>
         </div>
     </nav>
