--- a/test/assets/simple-mjs.html
+++ b/test/assets/simple-mjs.html
@@ -14,7 +14,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=Object.entries%2CPromise%2CPromise.prototype.finally%2CElement.prototype.remove"></script>
     <script type="module" src="/dist/hashagna.mjs"></script>
     <link rel="stylesheet" href="/style.css">
     <script type="module" src="/script.mjs"></script>
@@ -38,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/simple.html">Simple</a>
+                    <a class="nav-link" href="/simple-iife.html">Simple (IIFE)</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/existing-iframe.html">Existing iFrame</a>
+                    <a class="nav-link" href="/existing-iframe-iife.html">Existing iFrame (IIFE)</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/module.html">Module Import</a>
+                    <a class="nav-link active" href="/simple-mjs.html">Simple (MJS)</a>
                 </li>
             </ul>
         </div>
