--- a/test/assets/simple-iife.html
+++ b/test/assets/simple-iife.html
@@ -38,13 +38,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/simple.html">Simple</a>
+                    <a class="nav-link active" href="/simple-iife.html">Simple (IIFE)</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/existing-iframe.html">Existing iFrame</a>
+                    <a class="nav-link" href="/existing-iframe-iife.html">Existing iFrame (IIFE)</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/module.html">Module Import</a>
+                    <a class="nav-link" href="/simple-mjs.html">Simple (MJS)</a>
                 </li>
             </ul>
         </div>
