--- a/test/assets/simple-iife.html
+++ b/test/assets/simple-iife.html
@@ -14,8 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=Object.entries%2CPromise%2CPromise.prototype.finally%2CElement.prototype.remove"></script>
-    <script src="/dist/hashagna.min.js"></script>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=Object.entries%2CPromise%2CElement.prototype.remove"></script>
+    <script src="/dist/hashagna.iife.min.js"></script>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
@@ -45,6 +45,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/simple-mjs.html">Simple (MJS)</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/simple-amd.html">Simple (AMD)</a>
                 </li>
             </ul>
         </div>
