--- a/test/assets/simple-mjs.html
+++ b/test/assets/simple-mjs.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/simple-mjs.html">Simple (MJS)</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/simple-amd.html">Simple (AMD)</a>
+                </li>
             </ul>
         </div>
     </nav>
